--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "test": "CI=true react-scripts test",
+    "eject": "react-scripts eject",
+    "prepare": "husky install"
   },
   "eslintConfig": {
     "extends": [
@@ -36,6 +37,6 @@
     ]
   },
   "devDependencies": {
-    "husky": "^7.0.1"
+    "husky": "^7.0.0"
   }
 }
