--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "CI=true react-scripts test",
+    "test-watch": "react-scripts test",
     "eject": "react-scripts eject",
     "prepare": "husky install"
   },
